Updated environment parameters
scopus now uses the .env file and the .env example has been updated to include all API key needed in this repo

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # === REQUIRED SECRETS ===
 YOUR_NCBI_API_KEY=REPLACE_API_KEY
+YOUR_IEEE_API_KEY=REPLACE_API_KEY
+YOUR_SCOPUS_API_KEY=REPLACE_API_KEY
 USER_EMAIL=your_name@university.institution
 
 # === OUTPUT FOLDERS ===
